@@ -1,5 +1,4 @@
 #!/bin/bash
 cd "$(dirname "$0")"
 mvn clean compile
-java --module-path /usr/share/openjfx/lib --add-modules javafx.controls,javafx.web -cp target/classes com.dungeon.Main
-
+java -cp "/usr/share/openjfx/lib/*:target/classes" com.dungeon.Main
